--- a/imports/ui/body.html
+++ b/imports/ui/body.html
@@ -2,7 +2,7 @@
 	<div class="container">
 		<header>
 			<input type="button" class="editButton" value="Редактировать">
-			<input type="button" class="addButton" value="Добавить">
+			<!--<input type="button" class="addButton" value="Добавить">-->
 			<br>
 			<form class="edit" id="groupForm">
 				<p><input type="text" class="editGroup" id="gid"/> - ID группы</p>
